[package]
name = "lconvert"
description = "A cli tool for converting multiple files (with different extensions) at once"
version = "0.2.1"
edition = "2021"
authors = ["hodojek"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hodojek/lconvert"
repository = "https://github.com/hodojek/lconvert"
keywords = ["cli", "ffmpeg", "batch", "convert", "files"]
categories = ["command-line-utilities"]
exclude = ["/tests", "/gifs", "/.github"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.8"
anyhow = "1.0.91"
regex = "1.11.1"
glob = "0.3.1"
which = "6.0.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
blake3 = "1.5.4"

[profile.dev]
opt-level = 0 
debug = true  
rpath = false 
lto = false   
debug-assertions = true
panic = "unwind"  
incremental = true
overflow-checks = true 

[profile.release]
opt-level = "s" 
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true
